# cog

./: main.py  pyproject.toml
core/: chat.py  event_loop.py  history_transformer.py  in_memory_event_loop.py  in_memory_event_queue.py  openrouter_chat.py  processor.py  processor_registry.py  skills.py  tool_provider.py
core/chat/: __init__.py  openai_chat.py  openrouter_chat.py
core/event_loop/: __init__.py  event_queue.py  loop.py  processor.py  processor_registry.py  single_event_processor.py
core/event_processors/: message.py  subagent.py
core/iterator/: cache.py
core/logger/: __init__.py
core/tools/: __init__.py  math.py  mcp_adapter.py  read.py  run.py  skill.py  skill_loader.py  subagent.py
core/tools/utils/: pydantic_adapter.py
core/transport/: protocol.py
skills/math/: SKILL.md
skills/math/scripts/: calc  calculator  calculator.py
transport/telegram/: transport_impl.py
